navbar changes applied

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 							src="./assets/white-logo.png"
 							alt="logo"
 							class="logo"
+							width="100"
 						/>
 					</div>
 					<div class="line"></div>
